--- a/tests/e2e/smoke-daemonset/00-assert.yaml
+++ b/tests/e2e/smoke-daemonset/00-assert.yaml
@@ -11,6 +11,21 @@ spec:
 status:
   numberMisscheduled: 0
   (desiredNumberScheduled == numberReady): true
+
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  labels:
+    app.kubernetes.io/component: opentelemetry-collector
+    app.kubernetes.io/managed-by: opentelemetry-operator
+    app.kubernetes.io/name: daemonset-test-collector
+status:
+  containerStatuses:
+  - ready: true
+    started: true
+  phase: Running
+
 ---
 apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
@@ -18,7 +33,7 @@ metadata:
   name: daemonset-test
 status:
   (starts_with(image, 'ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector')): true
-  (version != ''): true
   scale:
-    replicas: 1
-    statusReplicas: "1/1"
+    (replicas >= `1`): true
+    (statusReplicas != ''): true
+  (version != ''): true
