--- a/tests/e2e/validations/01-install-tolerations.yaml
+++ b/tests/e2e/validations/01-install-tolerations.yaml
@@ -1,7 +1,7 @@
 apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
-  name: otel
+  name: sidecar-tolerations
 spec:
   mode: sidecar
   tolerations:
