--- a/tests/e2e/validations/00-install-priority-class.yaml
+++ b/tests/e2e/validations/00-install-priority-class.yaml
@@ -1,7 +1,7 @@
 apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
-  name: otel
+  name: sidecar-priorityclass
 spec:
   mode: sidecar
   priorityClassName: "priority"
