--- a/tests/e2e/validations/03-install-additional-containers.yaml
+++ b/tests/e2e/validations/03-install-additional-containers.yaml
@@ -1,7 +1,7 @@
 apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
-  name: otel
+  name: sidecar-additional-containers
 spec:
   mode: sidecar
   additionalContainers:
