feat: run autoinstrumentation init container as non root user 1000
Refs: #2272
Signed-off-by: patst <patrick.steinig@googlemail.com>

--- a/autoinstrumentation/apache-httpd/Dockerfile
+++ b/autoinstrumentation/apache-httpd/Dockerfile
@@ -23,3 +23,6 @@ COPY --from=agent /opt/opentelemetry/agent/opentelemetry-webserver-sdk /opt/open
 RUN chmod a+w /opt/opentelemetry/logs
 
 CMD ["cat", "Just delivering the Opentelemetry Apache/Nginx agent"]
+
+RUN addgroup -g 1000 -S nonroot && adduser -u 1000 -S nonroot -G nonroot
+USER 1000:1000
