--- a/.chloggen/ocpdashboards.yaml
+++ b/.chloggen/ocpdashboards.yaml
@@ -8,7 +8,7 @@ component: collector
 note: Fix OpenShift internal collector metrics dashboards
 
 # One or more tracking issues related to the change
-issues: []
+issues: [3994]
 
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
