--- a/.chloggen/ct_update-default-grace-period-to-30s.yaml
+++ b/.chloggen/ct_update-default-grace-period-to-30s.yaml
@@ -12,4 +12,6 @@ issues: [3989]
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
-subtext:
+subtext: |
+  The target allocator now waits for 30 seconds before reallocating targets from a collector which isn't Ready.
+  Setting this value to 0 will restore previous behaviour.
