--- a/.chloggen/ct_update-default-grace-period-to-30s.yaml
+++ b/.chloggen/ct_update-default-grace-period-to-30s.yaml
@@ -13,5 +13,5 @@ issues: [3989]
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
 subtext: |
-  The target allocator now waits for 30 seconds before reallocating targets from a collector which isn't Ready.
+  The config option collectorNotReadyGracePeriod have been set to 30s by default. The target allocator now waits for 30 seconds before reallocating targets from a collector which isn't Ready.
   Setting this value to 0 will restore previous behaviour.
