--- a/tests/e2e-instrumentation/instrumentation-java/00-install-instrumentation.yaml
+++ b/tests/e2e-instrumentation/instrumentation-java/00-install-instrumentation.yaml
@@ -6,7 +6,7 @@ spec:
   env:
     - name: OTEL_TRACES_SAMPLER
       value: always_on
-    # This is the default protocol in 2.x, whereas in 1.x it's grp. Set this here so the test can pass on both.
+    # This is the default protocol in 2.x, whereas in 1.x it's grpc. Set this here so the test can pass on both.
     - name: OTEL_EXPORTER_OTLP_PROTOCOL
       value: http/protobuf
     # This exporter is enabled by default in 2.x, but disabled in 1.x.
