fix kubernetes label to use correct operator

--- a/tests/e2e/operator-metrics/chainsaw-test.yaml
+++ b/tests/e2e/operator-metrics/chainsaw-test.yaml
@@ -23,7 +23,7 @@ spec:
               - -n
               - opentelemetry-operator-system
               - -l
-              - control-plane=controller-manager
+              - app.kubernetes.io/name=opentelemetry-operator-controller-manager-test
               - -o
               - jsonpath={.items[0].metadata.name}
             outputs:
