--- a/tests/e2e/operator-metrics/00-assert-operator.yaml
+++ b/tests/e2e/operator-metrics/00-assert-operator.yaml
@@ -3,11 +3,14 @@ kind: Pod
 metadata:
   namespace: opentelemetry-operator-system
   labels:
-    app.kubernetes.io/name: opentelemetry-operator-controller-manager-test
+    app.kubernetes.io/name: opentelemetry-operator
     control-plane: controller-manager
   namespace: opentelemetry-operator-system
 status:
   containerStatuses:
+  - name: kube-rbac-proxy
+    ready: true
+    started: true
   - name: manager
     ready: true
     started: true
