--- a/.chloggen/otecol-spec-replicas-default.yaml
+++ b/.chloggen/otecol-spec-replicas-default.yaml
@@ -13,4 +13,5 @@ issues: [4042]
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
-subtext:
+subtext: |
+  This default no longer relies on the admission webhook.
