[validations]: use common expression language to validate sidecar checks (#3968)
* chore: move to CEL for validations

* chainsaw

* chlog

* comment

* use standard method

* test

* make update

* makefile

* sidecar

* use chaisaw file

* caps

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -75,6 +75,7 @@ jobs:
          - e2e-multi-instrumentation
          - e2e-metadata-filters
          - e2e-ta-collector-mtls
+         - e2e-crd-validations
        include:
          - group: e2e-instrumentation
            setup: "add-instrumentation-params prepare-e2e"
