--- a/.chloggen/fix-ocp-finalizers.yaml
+++ b/.chloggen/fix-ocp-finalizers.yaml
@@ -8,7 +8,7 @@ component: collector, target allocator
 note: Fix operator RBAC for managing targetallocator finalizers on OpenShift.
 
 # One or more tracking issues related to the change
-issues: []
+issues: [4069]
 
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
