enable usetesting and containedctx
Signed-off-by: sivchari <shibuuuu5@gmail.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -58,6 +58,7 @@ linters:
     - errcheck
     - errorlint
     - exhaustive
+    - containedctx
     - godot
     - goheader
     - gosec
@@ -65,6 +66,7 @@ linters:
     - ineffassign
     - misspell
     - staticcheck
+    - usetesting
     - unparam
     - unused
   exclusions:
