--- a/.chloggen/patch-1.yaml
+++ b/.chloggen/patch-1.yaml
@@ -8,7 +8,7 @@ component: auto-instrumentation
 note: Fix the bug that k8s.container.name in OTEL_RESOURCE_ATTRIBUTES env is not set correctly for Go the auto-instrumentation when the pod has multiple containers.
 
 # One or more tracking issues related to the change
-issues: []
+issues: [4089]
 
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
