--- a/tests/e2e/targetallocator-metrics/00-install.yaml
+++ b/tests/e2e/targetallocator-metrics/00-install.yaml
@@ -1,32 +1,120 @@
+apiVersion: v1
+automountServiceAccountToken: true
+kind: ServiceAccount
+metadata:
+  name: ta
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: create-sm-prometheus
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+      - nodes/metrics
+      - services
+      - endpoints
+      - configmaps
+      - secrets
+      - namespaces
+    verbs:
+      - get
+      - watch
+      - list
+  - apiGroups:
+      - apps
+    resources:
+      - statefulsets
+      - services
+      - endpoints
+    verbs:
+      - get
+      - watch
+      - list
+  - apiGroups:
+      - discovery.k8s.io
+    resources:
+      - endpointslices
+    verbs:
+      - get
+      - watch
+      - list
+  - apiGroups:
+      - networking.k8s.io
+    resources:
+      - ingresses
+    verbs:
+      - get
+      - watch
+      - list
+  - apiGroups:
+      - monitoring.coreos.com
+    resources:
+      - servicemonitors
+      - podmonitors
+      - scrapeconfigs
+      - probes
+    verbs:
+      - "*"
+      - get
+      - watch
+      - list
+  - nonResourceURLs:
+      - /metrics
+    verbs:
+      - get
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: simplest-targetallocator-create-sm-prometheus
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: create-sm-prometheus
+subjects:
+  - kind: ServiceAccount
+    name: ta
+    namespace: ($namespace)
+---
 apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: simplest
-  namespace: opentelemetry-operator-system
-  labels:
-    app.kubernetes.io/name: collector-with-target-allocator
 spec:
-  mode: statefulset
-  targetAllocator:
-    enabled: true
-  observability:
-    metrics:
-      enableMetrics: true
   config:
     receivers:
       prometheus:
         config:
-          scrape_configs:
-            - job_name: "otel-collector"
-              scrape_interval: 10s
-              static_configs:
-                - targets: ["0.0.0.0:8888"]
-
+          scrape_configs: []
+    processors:
     exporters:
-      debug: {}
-
+      prometheus:
+        endpoint: 0.0.0.0:9090
     service:
       pipelines:
         metrics:
           receivers: [prometheus]
-          exporters: [debug]
+          exporters: [prometheus]
+
+  mode: statefulset
+  # observability:
+  #   metrics:
+  #     enableMetrics: true
+  livenessProbe:
+    initialDelaySeconds: 10
+  targetAllocator:
+    enabled: true
+    serviceAccount: ta
+    observability:
+      metrics:
+        enableMetrics: true
+    prometheusCR:
+      enabled: true
+      serviceMonitorSelector:
+        matchLabels:
+          app.kubernetes.io/name: simplest-targetallocator
+      podMonitorSelector:
+
