ran make update and fixed sts service name asserts in builder_test.go

--- a/tests/e2e/smoke-statefulset/00-assert.yaml
+++ b/tests/e2e/smoke-statefulset/00-assert.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: stateful-collector
+spec:
+  serviceName: stateful-collector-headless
 status:
   replicas: 1
   readyReplicas: 1
