retry getting ta metrics
ta could come up after the collector which could cause it to go into a
clbo. this race condition can make the metrics endpoint unavailable and
cause the test to be flaky.

Signed-off-by: Charlie Le <charlie_le@apple.com>

--- a/tests/e2e-targetallocator/targetallocator-metrics/chainsaw-test.yaml
+++ b/tests/e2e-targetallocator/targetallocator-metrics/chainsaw-test.yaml
@@ -45,7 +45,9 @@ spec:
                 value: ($podName)
             content: |
               #!/bin/bash
-              kubectl get --raw /api/v1/namespaces/${NAMESPACE}/pods/${podName}:9090/proxy/metrics
+              while ! kubectl get --raw /api/v1/namespaces/${NAMESPACE}/pods/${podName}:9090/proxy/metrics; do
+                sleep 1
+              done
             outputs:
               - name: metrics
                 value: (x_metrics_decode($stdout))
