--- a/.github/workflows/publish-test-e2e-images.yaml
+++ b/.github/workflows/publish-test-e2e-images.yaml
@@ -28,10 +28,17 @@ jobs:
     with:
       path: golang
       platforms: linux/arm64,linux/amd64,linux/s390x,linux/ppc64le
-  python:
+  python-latest:
     uses: ./.github/workflows/reusable-publish-test-e2e-images.yaml
     with:
       path: python
+      platforms: linux/arm64,linux/amd64,linux/s390x,linux/ppc64le
+  python-oldest:
+    uses: ./.github/workflows/reusable-publish-test-e2e-images.yaml
+    with:
+      path: python
+      build-args: 'python_version=3.9'
+      tag-suffix: '-3.9'
       platforms: linux/arm64,linux/amd64,linux/s390x,linux/ppc64le
   java:
     uses: ./.github/workflows/reusable-publish-test-e2e-images.yaml
