--- a/.github/workflows/publish-test-e2e-images.yaml
+++ b/.github/workflows/publish-test-e2e-images.yaml
@@ -5,12 +5,14 @@ on:
     paths:
       - 'tests/test-e2e-apps/**'
       - '.github/workflows/publish-test-e2e-images.yaml'
+      - '.github/workflows/reusable-publish-test-e2e-images.yaml'
     branches:
       - main
   pull_request:
     paths:
       - 'tests/test-e2e-apps/**'
       - '.github/workflows/publish-test-e2e-images.yaml'
+      - '.github/workflows/reusable-publish-test-e2e-images.yaml'
   workflow_dispatch:
 
 concurrency:
@@ -28,10 +30,17 @@ jobs:
     with:
       path: golang
       platforms: linux/arm64,linux/amd64,linux/s390x,linux/ppc64le
-  python:
+  python-latest:
     uses: ./.github/workflows/reusable-publish-test-e2e-images.yaml
     with:
       path: python
+      platforms: linux/arm64,linux/amd64,linux/s390x,linux/ppc64le
+  python-oldest:
+    uses: ./.github/workflows/reusable-publish-test-e2e-images.yaml
+    with:
+      path: python
+      build-args: 'python_version=3.9'
+      tag-suffix: '-3.9'
       platforms: linux/arm64,linux/amd64,linux/s390x,linux/ppc64le
   java:
     uses: ./.github/workflows/reusable-publish-test-e2e-images.yaml
